// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Schedule/Picker Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="datePicker"
    >
      <svg
        className="chevronRight"
        onClick={[Function]}
      >
        chevron-right-small.svg
      </svg>
      <svg
        className="calendar"
      >
        calendar.svg
      </svg>
      <div
        className="dateLabel"
      >
        <span
          className="monthName"
        >
          ינואר
        </span>
        <span
          className="yearName"
        >
          
          ,
        </span>
        16
        -
        21
      </div>
      <svg
        className="chevronLeft"
        onClick={[Function]}
      >
        chevron-left-small.svg
      </svg>
    </div>
    <div
      className="hospitalSelectable"
      onClick={[Function]}
    >
      <svg
        className="chevronDown"
      >
        chevron-down.svg
      </svg>
      הדסה עין כרם
    </div>
  </div>
  <div
    className="hospitalPicker"
  >
    <div
      className="hospitalPickerTitle"
    >
      בחר/י בית חולים:
    </div>
    <div
      className="hospitalOption"
      onClick={[Function]}
    >
      <div
        className="hospitalName selectedHospital bottomBorder"
      >
        <svg
          className="selected"
        >
          selected.svg
        </svg>
        הדסה עין כרם
      </div>
    </div>
    <div
      className="hospitalOption"
      onClick={[Function]}
    >
      <div
        className="hospitalName bottomBorder"
      >
        סורוקה
      </div>
    </div>
    <div
      className="hospitalOption"
      onClick={[Function]}
    >
      <div
        className="hospitalName"
      >
        תל השומר
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Schedule/Picker Different Months 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="datePicker"
    >
      <svg
        className="chevronRight"
        onClick={[Function]}
      >
        chevron-right-small.svg
      </svg>
      <svg
        className="calendar"
      >
        calendar.svg
      </svg>
      <div
        className="dateLabel"
      >
        <span
          className="monthName"
        >
          ינו'
           
        </span>
        30
         -
        <span
          className="monthName"
        >
           
          פבר'
           
        </span>
        4
      </div>
      <svg
        className="chevronLeft"
        onClick={[Function]}
      >
        chevron-left-small.svg
      </svg>
    </div>
    <div
      className="hospitalSelectable"
      onClick={[Function]}
    >
      <svg
        className="chevronDown"
      >
        chevron-down.svg
      </svg>
      הדסה עין כרם
    </div>
  </div>
  <div
    className="hospitalPicker"
  >
    <div
      className="hospitalPickerTitle"
    >
      בחר/י בית חולים:
    </div>
    <div
      className="hospitalOption"
      onClick={[Function]}
    >
      <div
        className="hospitalName selectedHospital bottomBorder"
      >
        <svg
          className="selected"
        >
          selected.svg
        </svg>
        הדסה עין כרם
      </div>
    </div>
    <div
      className="hospitalOption"
      onClick={[Function]}
    >
      <div
        className="hospitalName bottomBorder"
      >
        סורוקה
      </div>
    </div>
    <div
      className="hospitalOption"
      onClick={[Function]}
    >
      <div
        className="hospitalName"
      >
        תל השומר
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Schedule/Picker Different Year 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="datePicker"
    >
      <svg
        className="chevronRight"
        onClick={[Function]}
      >
        chevron-right-small.svg
      </svg>
      <svg
        className="calendar"
      >
        calendar.svg
      </svg>
      <div
        className="dateLabel"
      >
        <span
          className="monthName"
        >
          ינואר
        </span>
        <span
          className="yearName"
        >
           (2021)
          ,
        </span>
        5
        -
        10
      </div>
      <svg
        className="chevronLeft"
        onClick={[Function]}
      >
        chevron-left-small.svg
      </svg>
    </div>
    <div
      className="hospitalSelectable"
      onClick={[Function]}
    >
      <svg
        className="chevronDown"
      >
        chevron-down.svg
      </svg>
      הדסה עין כרם
    </div>
  </div>
  <div
    className="hospitalPicker"
  >
    <div
      className="hospitalPickerTitle"
    >
      בחר/י בית חולים:
    </div>
    <div
      className="hospitalOption"
      onClick={[Function]}
    >
      <div
        className="hospitalName selectedHospital bottomBorder"
      >
        <svg
          className="selected"
        >
          selected.svg
        </svg>
        הדסה עין כרם
      </div>
    </div>
    <div
      className="hospitalOption"
      onClick={[Function]}
    >
      <div
        className="hospitalName bottomBorder"
      >
        סורוקה
      </div>
    </div>
    <div
      className="hospitalOption"
      onClick={[Function]}
    >
      <div
        className="hospitalName"
      >
        תל השומר
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Schedule/Picker Only One Hospital 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="datePicker"
    >
      <svg
        className="chevronRight"
        onClick={[Function]}
      >
        chevron-right-small.svg
      </svg>
      <svg
        className="calendar"
      >
        calendar.svg
      </svg>
      <div
        className="dateLabel"
      >
        <span
          className="monthName"
        >
          ינואר
        </span>
        <span
          className="yearName"
        >
          
          ,
        </span>
        16
        -
        21
      </div>
      <svg
        className="chevronLeft"
        onClick={[Function]}
      >
        chevron-left-small.svg
      </svg>
    </div>
    <div>
      הדסה עין כרם
    </div>
  </div>
  <div
    className="hospitalPicker"
  >
    <div
      className="hospitalPickerTitle"
    >
      בחר/י בית חולים:
    </div>
    <div
      className="hospitalOption"
      onClick={[Function]}
    >
      <div
        className="hospitalName"
      >
        סורוקה
      </div>
    </div>
  </div>
</div>
`;
